--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
      <p>Season Kick-off: Meet thr Teams</p> 
      <h3>September 1</h3>
      <p>Firts Game of de Season(Check Game Schedule for details)</p> 
+     <h3>Estoy jugando con Git</h3>
 </body>
 </html>
