--- a/index.html
+++ b/index.html
@@ -4,27 +4,35 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width-device-width, inicial-scale= 1.0">
+   <link rel="stylesheet" href="estilos.css" >
    <link rel="icon"  href="/imagenes/icono/favicon-32x32.png" type="image/png">
    <Title>MIGHTY DUCK HOCKEY</Title>
 </head>
 <body>
  <header>
-   <img src="/imagenes/Logo_Mighty_ducks-01.png" alt="Logo Mighty Ducks" width="150">
-   <h1>Mighty Ducks Hockey League</h1>
-  <div>
-   <a href="index.html">Home</a>
-   <a href="about.html">About MDHL</a>
-   <a href="contact.html">contact</a>
- </div>
+    <h1 class="titulo">Mighty Ducks Hockey League</h1>
 </header> 
- <img src="/imagenes/hockey_1.jpg" alt="hockey_1" width="150">
- <h2>Upcoming Events</h2>
-     <h3>Agust 4</h3>
+<main>
+  <h2>Upcoming Events</h2>
+ <img class="icono" src="/imagenes/Logo_Mighty_ducks-01.png" alt="Logo Mighty Ducks" width="100">
+ <div>
+  <img class="caja" src="./imagenes/hockey_1.jpg" alt="hockey_1">
+ </div>
+ <div>
+  <a class="pase1" href="index.html">Home</a>
+     <h3 class="pase1">Agust 4</h3>
      <p>MDSL Fundraiser</p>
-     <h3>Agust 16</h3>
+    </div>
+  <a class="pase1"href="about.html">About MDHL</a>
+  <h3 class="pase1">Agust 16</h3>
      <p>Season Kick-off: Meet thr Teams</p> 
-     <h3>September 1</h3>
+  <a class="pase1"href="contact.html">contact</a>
+  <h3 class="pase1">September 1</h3>
      <p>Firts Game of de Season(Check Game Schedule for details)</p> 
-     <h3>Estoy jugando con Git</h3>
+</div>
+</main>
+<footer>
+
+</footer>
 </body>
 </html>
