--- a/about.html
+++ b/about.html
@@ -4,35 +4,38 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width-device-width, inicial-scale= 1.0">
+   <link rel="stylesheet" href="estilos.css" >
    <link rel="icon"  href="/imagenes/icono/favicon-32x32.png" type="image/png">
    <Title>MIGHTY DUCK HOCKEY</Title>
 </head>
 <body>
  <header>
-   <img src="/imagenes/Logo_Mighty_ducks-01.png" alt="Logo Mighty Ducks" width="150">
-   <h1>Mighty Ducks Hockey League</h1>
+      <h1 class="titulo">Mighty Ducks Hockey League</h1>
+ </header> 
+<main>
+  <h2>About MDHL</h2>
+  <img class="icono" src="/imagenes/Logo_Mighty_ducks-01.png" alt="Logo Mighty Ducks" width="100">
+  
+
   <div>
-    <a href="index.html">Home</a>
-    <a href="about.html">About MDHL</a>
-    <a href="contact.html">contact</a>
+    <a class="pase1" href="index.html">Home</a>
+       <h3 class="pase1">Mision</h3>
+       <p>To support young athletes living Chicago's northside neighborhood, who have an interest in<br>
+        learning and playing soccer, with opportunities to learn and practice skills related to the game of<br>
+        hockey, specifically those skills around team cooperation and good sportsmanship</p>
+      </div>
+    <a class="pase1"href="about.html">About MDHL</a>
+    <h3 class="pase1">Vision</h3>
+       <p>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes
+        through the building of character, self-discipline, and leadership.</p> 
+    <a class="pase1"href="contact.html">contact</a>
+    <h3 class="pase1">General Information</h3>
+       <p>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing
+        Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a
+        member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside
+        neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
+        parents and previous league membersFirts Game of de Season(Check Game Schedule for details)</p> 
   </div>
-</header>   
-
-  <img src="/imagenes/hockey_2.jpg" alt="hockey_2" width="150">
-
-
- <h3>Mision</h3>
-<p>To support young athletes living Chicago's northside neighborhood, who have an interest in
-learning and playing soccer, with opportunities to learn and practice skills related to the game of
-hockey, specifically those skills around team cooperation and good sportsmanship</p>
-<h3>Vision</h3>
-<p>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes
-through the building of character, self-discipline, and leadership.</p>
-<h3>General Information</h3>
-<p>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing
-Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a
-member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside
-neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
-parents and previous league members</p>
+</main> 
 </body>
 </html>
