--- a/contact.html
+++ b/contact.html
@@ -4,23 +4,28 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width-device-width, inicial-scale= 1.0">
+   <link rel="stylesheet" href="estilos.css" >
    <link rel="icon"  href="/imagenes/icono/favicon-32x32.png" type="image/png">
    <Title>MIGHTY DUCK HOCKEY</Title>
 </head>
 <body>
     <header>
-        <img src="/imagenes/Logo_Mighty_ducks-01.png" alt="Logo Mighty Ducks" width="150">
-        <h1>Mighty Ducks Hockey League</h1>
-       <div>
-         <a href="index.html">Home</a>
-         <a href="about.html">About MDHL</a>
-         <a href="contact.html">contact</a>
-       </div>
-     </header>   
-
-  <img src="/imagenes/hockey_3.jpg" alt="hockey_3" width="150">
-  <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
-  <p>We reply to your email as soon as we can.</p>
-
+      <h1 class="titulo">Mighty Ducks Hockey League</h1>
+    </header>   
+<main>
+  <h2>Contact</h2>
+  <img class="icono" src="/imagenes/Logo_Mighty_ducks-01.png" alt="Logo Mighty Ducks" width="100">
+  <div>
+    <img class="caja" src="/imagenes/hockey_3.jpg" alt="hockey_3">
+  </div>
+ <div>
+    <a class="pase1" href="index.html">Home</a>
+    <p class="p1">Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
+    <p>We reply to your email as soon as we can.</p>
+      </div>
+    <a class="pase1"href="about.html">About MDHL</a><br>
+    <a class="pase1"href="contact.html">contact</a>
+  </div>
+</main>
 </body>
 </html>
