--- a/index.html
+++ b/index.html
@@ -5,30 +5,56 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width-device-width, inicial-scale= 1.0">
    <link rel="stylesheet" href="estilos.css" >
-   <link rel="icon"  href="/imagenes/icono/favicon-32x32.png" type="image/png">
+   <link rel="icon"  href="./imagenes/icono/favicon-32x32.png" type="image/png">
    <Title>MIGHTY DUCK HOCKEY</Title>
 </head>
 <body>
  <header>
-    <h1 class="titulo">Mighty Ducks Hockey League</h1>
+   <h1 class="titulo">Mighty Ducks Hockey League</h1>
+   </div>
 </header> 
 <main>
   <h2>Upcoming Events</h2>
- <img class="icono" src="/imagenes/Logo_Mighty_ducks-01.png" alt="Logo Mighty Ducks" width="100">
+ <img class="icono" src="./imagenes/logo_mighty_ducks-01.png" alt="Logo Mighty Ducks" width="100">
  <div>
-  <img class="caja" src="./imagenes/hockey_1.jpg" alt="hockey_1">
  </div>
- <div>
-  <a class="pase1" href="index.html">Home</a>
-     <h3 class="pase1">Agust 4</h3>
-     <p>MDSL Fundraiser</p>
-    </div>
-  <a class="pase1"href="about.html">About MDHL</a>
-  <h3 class="pase1">Agust 16</h3>
-     <p>Season Kick-off: Meet thr Teams</p> 
-  <a class="pase1"href="contact.html">contact</a>
-  <h3 class="pase1">September 1</h3>
-     <p>Firts Game of de Season(Check Game Schedule for details)</p> 
+ <div class="contenedor">
+   <div class="col-flex1">
+   <div class="col1">
+      <a class="" href="index.html">Home</a>
+   </div>
+   <div class="col1">
+      <a href="about.html">About MDHL</a>
+   </div>
+   <div class="col1">
+      <a href="calendario.html">Calendar</a>
+   </div>   
+   <div class="col1">
+      <a href="reglas.html">Rules & Policies</a>
+   </div>
+   <div class="col1">
+      <a href="contact.html">Contact</a>
+   </div>
+ </div>
+ <div class="col-flex2" >
+   <section class="col2">
+      <h3>Agust 4</h3>
+      <p>MDSL Fundraiser</p>
+   </section>
+   <section class="col2">
+      <h3>Agust 16</h3>
+      <p>Season Kick-off: Meet thr Teams</p> 
+   </section>
+   <section class="col2">
+      <h3>September 1</h3>
+      <p>Firts Game of de Season(Check Game Schedule for details)</p> 
+   </section>   
+</div>
+<div class="col-flex3">
+   <div class="col3">
+      <img src="./imagenes/hockey_1.jpg" alt="hockey_1">
+   </div> 
+</div>
 </div>
 </main>
 <footer>
