--- a/about.html
+++ b/about.html
@@ -16,26 +16,44 @@
   <h2>About MDHL</h2>
   <img class="icono" src="/imagenes/Logo_Mighty_ducks-01.png" alt="Logo Mighty Ducks" width="100">
   
-
-  <div>
-    <a class="pase1" href="index.html">Home</a>
-       <h3 class="pase1">Mision</h3>
-       <p>To support young athletes living Chicago's northside neighborhood, who have an interest in<br>
-        learning and playing soccer, with opportunities to learn and practice skills related to the game of<br>
-        hockey, specifically those skills around team cooperation and good sportsmanship</p>
-      </div>
-    <a class="pase1"href="about.html">About MDHL</a>
-    <h3 class="pase1">Vision</h3>
-       <p>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes
-        through the building of character, self-discipline, and leadership.</p> 
-    <a class="pase1"href="contact.html">contact</a>
-    <h3 class="pase1">General Information</h3>
-       <p>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing
-        Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a
-        member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside
-        neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
-        parents and previous league membersFirts Game of de Season(Check Game Schedule for details)</p> 
+  <div class="contenedor">
+    <div class="col-flex1">
+    <div class="col1">
+       <a class="" href="index.html">Home</a>
+    </div>
+    <div class="col1">
+       <a href="about.html">About MDHL</a>
+    </div>
+    <div class="col1">
+       <a href="calendario.html">Calendar</a>
+    </div>   
+    <div class="col1">
+       <a href="reglas.html">Rules & Policies</a>
+    </div>
+    <div class="col1">
+       <a href="contact.html">Contact</a>
+    </div>
   </div>
+  <div class="col-flex2" >
+    <section class="col2">
+       <h3 >Mision</h3>
+       <p id="parrafo1">To support young athletes living Chicago's northside neighborhood, who have an interest in learning and playing soccer, with opportunities to learn and practice skills related to the game of hockey, specifically those skills around team cooperation and good sportsmanship</p>
+    </section>
+    <section class="col2">
+      <h3>Vision</h3>
+      <p id="parrafo2">The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes through the building of character, self-discipline, and leadership.</p> 
+    </section>
+    <section class="col2">
+       <h3>General Information</h3>
+       <p id="parrafo3">The Mighty Ducks Soccer League was established in 1996 to provide athletes residing Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of parents and previous league membersFirts Game of de Season(Check Game Schedule for details)</p>  
+    </section>   
+ </div>
+ <div class="col-flex3">
+    <div class="col3">
+       <img src="./imagenes/hockey_2.jpg" alt="hockey_2">
+    </div> 
+ </div>
+</div>
 </main> 
 </body>
 </html>
