--- a/calendario.html
+++ b/calendario.html
@@ -81,9 +81,12 @@
         </tr>
     </tbody>
  </table>
- <p>Facility Type: Outdoor </p>
-    
-
+<div class="pietabla">
+    <p>Facility Type: Outdoor </p>
+    <p>Additional Information: If deemed necessary by MDHL games may be shortened or cancelled due to extreme weather conditions.</p> 
+    <p>Please direct all questions to: Michael Randall, League Coordinator</p> 
+    <p>Phone:(630) 690-8132 Email:<a href="mailto:michael.randall©cchihockey.org">michael.randall©cchihockey.org</a></p>
+</div>
  </div>
  
  </div>
