--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 </head>
 <body>
  <header>
-   <h1 class="titulo">Mighty Ducks Hockey League</h1>
+   <div>
+      <img class="icono" src="./imagenes/logo_mighty_ducks-01.png" alt="Logo Mighty Ducks">
    </div>
-</header> 
+   <di>
+      <h1 class="titulo">Mighty Ducks Hockey League</h1>
+   </di> 
+ </header> 
 <main>
   <h2>Upcoming Events</h2>
- <img class="icono" src="./imagenes/logo_mighty_ducks-01.png" alt="Logo Mighty Ducks" width="100">
- <div>
- </div>
  <div class="contenedor">
    <div class="col-flex1">
    <div class="col1">
