--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
    <Title>MIGHTY DUCK HOCKEY</Title>
 </head>
 <body>
- <header>
+ <header >
+   <div id="banner">
+   </div>
    <div>
       <img class="icono" src="./imagenes/logo_mighty_ducks-01.png" alt="Logo Mighty Ducks">
    </div>
-   <di>
+   <!--<di>
       <h1 class="titulo">Mighty Ducks Hockey League</h1>
-   </di> 
+   </di>--> 
  </header> 
 <main>
-  <h2>Upcoming Events</h2>
+  <!--<h2>Upcoming Events</h2>-->
  <div class="contenedor">
    <div class="col-flex1">
    <div class="col1">
@@ -28,16 +30,22 @@
       <a href="about.html">About MDHL</a>
    </div>
    <div class="col1">
-      <a href="calendario.html">Calendar</a>
+      <a href="calendario.html">Game Information</a>
    </div>   
    <div class="col1">
       <a href="reglas.html">Rules & Policies</a>
+   </div>
+   <div class="col1">
+      <a href="formulario.html">Registration Form</a>
    </div>
    <div class="col1">
       <a href="contact.html">Contact</a>
    </div>
  </div>
  <div class="col-flex2" >
+   <section>
+      <h2>Upcoming Events</h2>
+   </section>
    <section class="col2">
       <h3>Agust 4</h3>
       <p>MDSL Fundraiser</p>
@@ -51,15 +59,11 @@
       <p>Firts Game of de Season(Check Game Schedule for details)</p> 
    </section>   
 </div>
-<div class="col-flex3">
-   <div class="col3">
-      <img src="./imagenes/hockey_1.jpg" alt="hockey_1">
-   </div> 
-</div>
+
 </div>
 </main>
-<footer>
-
-</footer>
+<!--<footer>
+   <h1 class="titulo">Mighty Ducks Hockey League</h1>
+</footer>-->
 </body>
 </html>
