--- a/about.html
+++ b/about.html
@@ -10,31 +10,38 @@
 </head>
 <body>
  <header>
-      <h1 class="titulo">Mighty Ducks Hockey League</h1>
+   <div id="banner">
+   </div>
+   <div>
+      <img class="icono" src="./imagenes/logo_mighty_ducks-01.png" alt="Logo Mighty Ducks">
+   </div>
  </header> 
 <main>
-  <h2>About MDHL</h2>
-  <img class="icono" src="/imagenes/Logo_Mighty_ducks-01.png" alt="Logo Mighty Ducks" width="100">
-  
   <div class="contenedor">
     <div class="col-flex1">
     <div class="col1">
-       <a class="" href="index.html">Home</a>
-    </div>
-    <div class="col1">
-       <a href="about.html">About MDHL</a>
-    </div>
-    <div class="col1">
-       <a href="calendario.html">Calendar</a>
-    </div>   
-    <div class="col1">
-       <a href="reglas.html">Rules & Policies</a>
-    </div>
-    <div class="col1">
-       <a href="contact.html">Contact</a>
-    </div>
+      <a class="#" href="index.html">Home</a>
+   </div>
+   <div class="col1">
+      <a href="about.html">About MDHL</a>
+   </div>
+   <div class="col1">
+      <a href="calendario.html">Game Information</a>
+   </div>   
+   <div class="col1">
+      <a href="reglas.html">Rules & Policies</a>
+   </div>
+   <div class="col1">
+      <a href="formulario.html">Registration Form</a>
+   </div>
+   <div class="col1">
+      <a href="contact.html">Contact</a>
+   </div>
   </div>
   <div class="col-flex2" >
+   <section>
+      <h2>About MDHL</h2>
+   </section>
     <section class="col2">
        <h3 >Mision</h3>
        <p id="parrafo1">To support young athletes living Chicago's northside neighborhood, who have an interest in learning and playing soccer, with opportunities to learn and practice skills related to the game of hockey, specifically those skills around team cooperation and good sportsmanship</p>
@@ -47,11 +54,6 @@
        <h3>General Information</h3>
        <p id="parrafo3">The Mighty Ducks Soccer League was established in 1996 to provide athletes residing Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of parents and previous league membersFirts Game of de Season(Check Game Schedule for details)</p>  
     </section>   
- </div>
- <div class="col-flex3">
-    <div class="col3">
-       <img src="./imagenes/hockey_2.jpg" alt="hockey_2">
-    </div> 
  </div>
 </div>
 </main> 
