--- a/index.html
+++ b/index.html
@@ -15,16 +15,12 @@
    <div>
       <img class="icono" src="./imagenes/logo_mighty_ducks-01.png" alt="Logo Mighty Ducks">
    </div>
-   <!--<di>
-      <h1 class="titulo">Mighty Ducks Hockey League</h1>
-   </di>--> 
  </header> 
 <main>
-  <!--<h2>Upcoming Events</h2>-->
  <div class="contenedor">
    <div class="col-flex1">
    <div class="col1">
-      <a class="" href="index.html">Home</a>
+      <a class="#" href="index.html">Home</a>
    </div>
    <div class="col1">
       <a href="about.html">About MDHL</a>
@@ -62,8 +58,5 @@
 
 </div>
 </main>
-<!--<footer>
-   <h1 class="titulo">Mighty Ducks Hockey League</h1>
-</footer>-->
 </body>
 </html>
