--- a/calendario.html
+++ b/calendario.html
@@ -10,34 +10,36 @@
 </head>
 <body>
  <header>
-   <h1 class="titulo">Mighty Ducks Hockey League</h1>
+    <div id="banner">
+    </div>
+    <div>
+       <img class="icono" src="./imagenes/logo_mighty_ducks-01.png" alt="Logo Mighty Ducks">
+    </div>
 </header> 
 <main>
-  <h2>RULES OF PLAY & POLICIES</h2>
-  <h4>IHF rules shall govern MDHL play except as modified herein.</h4>
- <img class="icono" src="./imagenes/logo_mighty_ducks-01.png" alt="Logo Mighty Ducks" width="100">
- <div>
- </div>
-
  <div class="contenedor">
     <div class="col-flex1">
-    <div class="col1">
-       <a class="" href="index.html">Home</a>
-    </div>
-    <div class="col1">
-       <a href="about.html">About MDHL</a>
-    </div>
-    <div class="col1">
-       <a href="calendario.html">Calendar</a>
-    </div>   
-    <div class="col1">
-       <a href="reglas.html">Rules & Policies</a>
-    </div>
-    <div class="col1">
-       <a href="contact.html">Contact</a>
-    </div>
+        <div class="col1">
+            <a class="#" href="index.html">Home</a>
+         </div>
+         <div class="col1">
+            <a href="about.html">About MDHL</a>
+         </div>
+         <div class="col1">
+            <a href="calendario.html">Game Information</a>
+         </div>   
+         <div class="col1">
+            <a href="reglas.html">Rules & Policies</a>
+         </div>
+         <div class="col1">
+            <a href="formulario.html">Registration Form</a>
+         </div>
+         <div class="col1">
+            <a href="contact.html">Contact</a>
+         </div>
   </div>
   <div class="col-flex4" >
+    <h2>Game Information</h2>
  <table>
     <caption> Fall Schedule</caption>
     <thead>
@@ -82,10 +84,10 @@
     </tbody>
  </table>
 <div class="pietabla">
-    <p>Facility Type: Outdoor </p>
-    <p>Additional Information: If deemed necessary by MDHL games may be shortened or cancelled due to extreme weather conditions.</p> 
-    <p>Please direct all questions to: Michael Randall, League Coordinator</p> 
-    <p>Phone:(630) 690-8132 Email:<a href="mailto:michael.randall©cchihockey.org">michael.randall©cchihockey.org</a></p>
+    <h5>Facility Type: Outdoor </h5>
+    <h6>Additional Information: If deemed necessary by MDHL games may be shortened or cancelled due to extreme weather conditions.</h6> 
+    <h6>Please direct all questions to: Michael Randall, League Coordinator</h6> 
+    <h6>Phone:(630) 690-8132 Email:<a href="mailto:michael.randall©cchihockey.org">michael.randall©cchihockey.org</a></h6>
 </div>
  </div>
  
