--- a/contact.html
+++ b/contact.html
@@ -10,39 +10,42 @@
 </head>
 <body>
     <header>
-      <h1 class="titulo">Mighty Ducks Hockey League</h1>
+      <div id="banner">
+      </div>
+      <div>
+         <img class="icono" src="./imagenes/logo_mighty_ducks-01.png" alt="Logo Mighty Ducks">
+      </div>
     </header>   
 <main>
-  <h2>Contact</h2>
-  <img class="icono" src="/imagenes/Logo_Mighty_ducks-01.png" alt="Logo Mighty Ducks" width="100">
+ 
   <div class="contenedor">
     <div class="col-flex1">
-    <div class="col1">
-       <a class="" href="index.html">Home</a>
-    </div>
-    <div class="col1">
-       <a href="about.html">About MDHL</a>
-    </div>
-    <div class="col1">
-       <a href="calendario.html">Calendar</a>
-    </div>   
-    <div class="col1">
-       <a href="reglas.html">Rules & Policies</a>
-    </div>
-    <div class="col1">
-       <a href="contact.html">Contact</a>
-    </div>
+      <div class="col1">
+         <a class="#" href="index.html">Home</a>
+      </div>
+      <div class="col1">
+         <a href="about.html">About MDHL</a>
+      </div>
+      <div class="col1">
+         <a href="calendario.html">Game Information</a>
+      </div>   
+      <div class="col1">
+         <a href="reglas.html">Rules & Policies</a>
+      </div>
+      <div class="col1">
+         <a href="formulario.html">Registration Form</a>
+      </div>
+      <div class="col1">
+         <a href="contact.html">Contact</a>
+      </div>
   </div>
   <div class="col-flex2" >
+   <h2>Contact</h2>
     <div class="col2">
       <p >Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
       <p>We reply to your email as soon as we can.</p>
     </div>
   </div>
- <div class="col-flex3">
-    <div class="col3">
-       <img src="./imagenes/hockey_3.jpg" alt="hockey_3">
-    </div> 
  </div>
 </div>
 </main>
